# icfp

./: .gitignore  Dockerfile  README.md  judgements.tex  package.yaml  stack.yaml  tmp
app/: EquivalenceCheck.hs
benchmarks/: Code.hs
benchmarks/lists/: fold.hs  list.hs
benchmarks/orig/: hw1.ml  hw2.ml  hw3.ml
benchmarks/pos/: Add.hs  Reverse.hs  pair1.hs  pair10.hs  pair12.hs  pair2.hs  pair3.hs  pair4.hs  pair5.hs  pair6.hs  pair7.hs  pair9.hs
benchmarks/ref/: additivePersistence.ml  assoc.ml  digitalRoot.ml  digits.ml  digitsOfInt.ml  fixpoint.ml  listReverse.ml  removeDuplicates.ml  sumList.ml  wwhile.ml
benchmarks/tests/: AddDigits.hs  ClimbStairs.hs  ClimbStairs0.ml  TrailingZeroes.hs  program1  program2  program4
benchmarks/tmp/: digitsOfInt.183.ml  digitsOfInt.244.ml  listReverse.185.ml  listReverse.187.ml  listReverse.189.ml  sumList.205.ml
draft/: abstract.tex  abstract.txt  approach.tex  background.tex  cmds.tex  evaluation.tex  hdr.tex  p.bib  p.tex  related-work.tex  rev.tex  shorthand.tex  std.tex
draft/code/: ClimbStairs0.ml  ClimbStairs0.ml.tex  ClimbStairs1.ml  ClimbStairs1.ml.tex  non-linear.ml  non-linear.ml.tex
equivalence-check/: .gitignore  ChangeLog.md  README.md  equivalence-check.cabal  notes  output1.txt  package.yaml  stack.yaml  test.z3  test1.z3  todo
equivalence-check/app/: EquivalenceCheck.hs
equivalence-check/old/: CHC.hs  Expr.hs  InferRelationalTypes.hs.tmp  Lexer.x  SimpleCheckInductive.hs  SimpleInferRelationalTypes.hs
equivalence-check/src/: EquivalenceCheck.hs  Grammar.hs  Language.hs  output1.txt  test.z3
equivalence-check/src/Formula/: Expr.hs  Z3.hs
equivalence-check/src/Grammar/: Chc.hs  Dominator.hs  Grammar.hs  Plot.hs  Product.hs  Simplify.hs  Solve.hs  Synthesize.hs  Unwind.hs  script
equivalence-check/src/Language/: HORT.hs  HOTypeInference.hs  Transformations.hs  TypeDAG.hs  TypeDAG.hs.old  TypeInference.hs  Types.hs  VersionSpace.hs
equivalence-check/src/Language/Equivalence/: CHC.hs  Check.hs  CkInd.hs  Derivations.hs  Expr.hs  InferRelationalType.hs  InferRelationalTypes.hs  Lexer.x  Misc.hs  Parser.y  RelationalTypes.hs  SimpleCheckInductive.hs  SimpleInferRelationalTypes  SimpleInferRelationalTypes.hs  SimpleRelationalTypes.hs  Transformations.hs  TypeInference.hs  Types.hs  Verify.hs  VerifyDerivation.hs  test2.hs  test3.hs  test4.hs  test5.hs  test6.hs  test7.hs  test8.hs  test9.hs  testFalse1.hs  testTrue3.hs  testZ3_1.hs  test_bin.hs  untitled
equivalence-check/src/Language/Equivalence/unintTest/: testTrue1.hs  testTrue2.hs
equivalence-check/src/Language/Haskell/: CHC.hs  Expr.hs  GhcPlay.hs  Misc.hs  Types.hs  Verify.hs  VerifyDerivation.hs
equivalence-check/src/Language/Haskell/GHC/: GhcPlay.hs  Misc.hs
equivalence-check/tests/lists/: fold.hs  headTail.hs  map.hs
equivalence-check/tests/pos/: Add.hs  Reverse.hi  Reverse.hs  Six.hs  pair11.hs  pair8.hs
equivalence-check/tests/pos/.liquid/: Reverse.hs.cst.html  Reverse.hs.json
infer-refinements/: abstract.tex  background.tex  cmds.tex  hdr.tex  p.bib  p.tex  rev.tex  todo.txt  todo.txt~
infer-refinements/data/: common.gnuplot
papers/paper/: approach.tex  aspell.words  background.tex  cmds.tex  haskellListings.tex  hdr.tex  p.bib  related-work.tex  shorthand.tex  std.tex
papers/syn-refinements/: Makefile  SumEq.hs  SumEq.ml  background.tex  intro.tex  p.bib  p.tex  relwk.tex
src/: Language.hs
src/Formula/: Expr.hs  Parser.hs  Var.hs  Vocab.hs  Z3.hs
syn-refinements/: abstract.tex  approach.tex  background.tex  design.tex  haskellListings.tex  hdr.tex  intro.tex  ocaml.tex  overview.tex  p.bib  p.tex  pkgs.tex  rev.tex  shorthand.tex  std.tex  todo.txt
tests/: AddDigits.hs  ClimbStairs.hs  ClimbStairs0.ml  ClimbStairs1.ml  Reverse.hs  TrailingZeroesProof.hs  example.txt  program3
(+23 files in other folders)
