name:                equivalence-check
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              nikivazou
maintainer:          nikivazou@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable equivalence-check
  main-is:             EquivalenceCheck.hs
  ghc-options:         -W -threaded -Werror
  build-depends:       base >=4.9 && <4.10
                     , ghc-paths
                     , temporary
                     , containers
                     , parsec
                     , parsec-numbers
                     , unordered-containers
                     , pretty
                     
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Language.Haskell.Misc
                       Language.Haskell.Types
                       Language.Haskell.Verify
                       Language.Haskell.CHC
                       Language.Haskell.Expr
