name:                equivalence-check
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              nikivazou
maintainer:          nikivazou@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable equivalence-check
  main-is:             EquivalenceCheck.hs
  ghc-options:         -W -threaded -Werror
  build-depends:       base >=4.9 && <4.10
                     , ghc-paths
                     , temporary
                     , containers
                     , parsec
                     , parsec-numbers
                     , unordered-containers
                     , pretty
                     , array
                     , mtl
                     , process
                     , monad-loops

  hs-source-dirs:      src
  default-language:    Haskell2010
  build-tools:         alex, happy
  other-modules:       Language.Equivalence.Misc
                       Language.Equivalence.Types
                       Language.Equivalence.Lexer
                       Language.Equivalence.Parser
                       Language.Equivalence.Verify
                       Language.Equivalence.CHC
                       Language.Equivalence.Expr
                       Language.Equivalence.Derivations
                       Language.Equivalence.TypeInference

  Default-Extensions: OverloadedStrings
